--- a/Submission10/MyNotebook.ipynb
+++ b/Submission10/MyNotebook.ipynb
@@ -176,8 +176,7 @@
     "## Applications of the Escape Velocity Equation \n",
     "\n",
     "\n",
-    "The most important application of the escape velocity equation is used by NASA when they are calculating the speed needed to launch their manned as well as their unmanned rockets into space with. Sometimes these missions require only that the rocket gets enough speed to enter Earth's orbit and move around Earth, but sometimes these missions require that the rockets shoot past Earth's orbit in order to go further. \n",
-    "AREAS WE USE IT IN HERE HERE HERE HERE\n"
+    "The most important application of the escape velocity equation is used by NASA when they are calculating the speed needed to launch their manned as well as their unmanned rockets into space with. Sometimes these missions require only that the rocket gets enough speed to enter Earth's orbit and move around Earth, but sometimes these missions require that the rockets shoot past Earth's orbit in order to go further. \n"
    ]
   },
   {
